# async_csv

./: .gitignore  README.md  docker-compose.yml
project/: Dockerfile  pyproject.toml  requirements.txt  utils.py
project/async_csv/: apps.py  tasks.py  urls.py  views.py
project/core/: __init__.py  celery.py  settings.py  urls.py
project/files/: data.csv
